--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -8,6 +8,15 @@
   ],
   "plugins": [
     {
+      "id": "library",
+      "title": "Library",
+      "environments": [ "edit" ],
+      "isPalette": true,
+      "paletteRect": "top: auto; bottom: 25px; left: 25px; height: 388px; width: 360px;",
+      "url": "/tools/library",
+      "includePaths": [ "**.docx**" ]
+    },
+    {
       "id": "asset-library",
       "title": "AEM Assets",
       "environments": [
