--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -17,9 +17,7 @@
     {
       "id": "google-assist",
       "title": "Google Assist",
-      "environments": [
-        "edit"
-      ],
+      "environments": [ "edit","dev", "preview", "live", "prod"],
       "url": "http://www.google.com",
       "isPalette": true,
       "includePaths": [
@@ -36,7 +34,7 @@
       "containerId": "tools",
       "id": "localize",
       "title": "Localize",
-      "environments": [ "edit" ],
+      "environments": [ "edit","dev", "preview", "live", "prod" ],
       "url": "/tools/loc/index.html",
       "passReferrer": true,
       "includePaths": [ "**/:x**" ]
@@ -45,7 +43,7 @@
       "containerId": "tools",
       "id": "floodgate",
       "title": "YouTube",
-      "environments": [ "edit" ],
+      "environments": [ "edit","dev", "preview", "live", "prod" ],
       "url": "https://www.youtube.com/@AEMGeeks",
       "passReferrer": true,
       "includePaths": [ "**/:x**" ]
