--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -7,14 +7,14 @@
       "environments": [ "edit","dev", "preview", "live", "prod"],
       "url": "https://www.google.com/search?q=edge+delivery+services",
       "passConfig":true,
+      "passReferrer": true,
       "excludePaths":[
         "**/fr/**"
       ],
       "includePaths": [
         "**.docx**",
         "**/fr/blocks/**"
-      ],
-      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+      ]
     },
     {
       "id": "tools",
@@ -24,22 +24,10 @@
     {
       "containerId": "tools",
       "id": "localize",
-      "title": "Localize 2",
+      "title": "Localize",
       "environments": [ "edit","dev", "preview", "live", "prod" ],
-      "url": "/tools/loc/index.html",
-      "passReferrer": true,
-      "includePaths": [ "**/:x**" ]
-    },
-    {
-      "containerId": "tools",
-      "id": "contactus",
-      "title": "Contact US",
-      "environments": [ "edit","dev", "preview", "live", "prod" ],
-      "url": "/tools/contactus/contactus.html?user=aem-geeks",
-      "isPalette": true,
-      "passReferrer": false,
-      "includePaths": [ "**/:x**" ],
-      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:500px; height: calc(100vh - 60px)"
+      "url": "https://www.microsoft.com/en-us/translator/business/translator-api/",
+      "passReferrer": true
     },
     {
       "containerId": "tools",
@@ -47,8 +35,7 @@
       "title": "YouTube",
       "environments": [ "edit","dev", "preview", "live", "prod" ],
       "url": "https://www.youtube.com/@AEMGeeks",
-      "passReferrer": true,
-      "includePaths": [ "**/:x**" ]
+      "passReferrer": true
     }
   ]
 }
