--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -4,7 +4,7 @@
     {
       "id": "google-assist",
       "title": "Google Assist",
-      "environments": [ "edit","dev", "preview", "live", "prod"],
+      "environments": [ "dev", "live", "prod"],
       "url": "https://www.google.com/search?q=edge+delivery+services",
       "passConfig":true,
       "passReferrer": true,
