--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -4,8 +4,9 @@
     {
       "id": "google-assist",
       "title": "Google Assist",
-      "environments": [ "dev", "live", "prod"],
+      "environments": [ "edit","dev", "preview", "live", "prod"],
       "url": "https://www.google.com/search?q=edge+delivery+services",
+      "isPalette": true,
       "passConfig":true,
       "passReferrer": true,
       "excludePaths":[
@@ -14,7 +15,8 @@
       "includePaths": [
         "**.docx**",
         "**/fr/blocks/**"
-      ]
+      ],
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
     },
     {
       "id": "tools",
