--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -2,6 +2,17 @@
   "project": "Geeks Edge Deliver Services",
   "plugins": [
     {
+      "id": "asset-library",
+      "title": "AEM Assets",
+      "environments": [
+      "edit","dev"
+      ],
+      "url": "https://experience.adobe.com/solutions/CQ-assets-selectors/static-assets/resources/franklin/asset-selector.html",
+      "isPalette": true,
+      "passConfig": true,
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:400px; height: calc(100vh - 60px)"
+    },  
+    {
       "id": "google-assist",
       "title": "Google Assist",
       "environments": [ "edit","dev", "preview", "live", "prod"],
