--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -36,6 +36,17 @@
     },
     {
       "containerId": "tools",
+      "id": "contactus",
+      "title": "Contact US",
+      "environments": [ "edit","dev", "preview", "live", "prod" ],
+      "url": "/tools/contactus/contactus.html?user=aem-geeks",
+      "isPalette": true,
+      "passConfig": false,
+      "includePaths": [ "**/:x**" ],
+      "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:500px; height: calc(100vh - 60px)"
+    },
+    {
+      "containerId": "tools",
       "id": "localize",
       "title": "Localize",
       "environments": [ "edit","dev", "preview", "live", "prod" ],
