--- a/helix-query.yaml
+++ b/helix-query.yaml
@@ -5,6 +5,7 @@ indices:
   site:
     include:
       - '**'
+    target: /query-index  
     # target: SharePoint URL of your query index, e.g. <shared-folder-url>/query-index.xlsx
     properties:
       author:
