--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,4 +1,3 @@
-mountpoints:{
+mountpoints:
   /: https://drive.google.com/drive/folders/1wOcpoK6uy09r82JtcZYKwfY6eE3X-TDd\n
   /hcp: https://drive.google.com/drive/folders/1soI2MARKUMmiByLMijSz97Dw8UxkZ8FZ
-}
